# Oligarchy

./: .gitignore  .mcp.json  .sops.yaml  CLAUDE.md  DeMoD Nix store.md  LICENSE  README.markdown  README.md  REVIEW-dcf-mesh-agent.md  VM nix flake module plan.md  VM-nix-flake-module-plan.md  configuration.nix  flake.nix  hydramesh.nix  novelty.md  nvidia-desktop-config.nix  result
assets/: Oligarchy-toy-edition.xcf  ascii.txt  demods_codex.html
docs/: dcf-mesh-agent.md  secure-boot-enrollment.md  security-hardening.md
home/: README.md  asher.nix  default.nix  demod.nix  flake.nix  home-minimal.nix  home.nix  packages.nix  wlogout.nix
hydramesh/: flake.nix  hydramesh_config_editor.py
modules/: agentic-local-ai.nix  archibaldos-dsp-vm.nix  audio.nix  blipply-integration.nix  boot-intro.nix  cachyos-bore-kernel.nix  configuration.nix  cpu-security.nix  dcf-community-node.nix  dcf-identity.nix  dcf-mesh-agent.nix  dcf-tray.nix  dsp-rigs.nix  flake.nix  framework.nix  hardware-configuration.nix  hermes-mcp.nix  icewm.nix  iso.nix  kernel.nix  minecraft.nix  oligarchy-mcp.nix  openclaw-agent.nix  personas.nix  platform.nix  secrets.nix  secure-boot.nix  terminus-dev.nix
modules/dsp-ctl/: .gitignore  Cargo.toml  flake.nix
modules/dsp-ctl/src/: cli.rs  main.rs  transport.rs  tui.rs
modules/greeting/: Cargo.toml  EXAMPLES_DSP.md  LICENSE  QUICKSTART.md  README.md  TUI_DEV_GUIDE.md  demo.py  example-configuration.nix  flake.nix  greeting.nix  setup.py  welcome_tui.py
modules/greeting/src/: cli.rs  config.rs  image.rs  lib.rs  main.rs  system_info.rs  tui_main.rs
scripts/: usb-audio-stress.sh  usb-xhci-watch.sh  xhci-recover.sh
tests/: dcf-mesh-conversation.sh  default.nix
vm-manager/: README.md  (+1 more)
(+126 files in other folders)
