[package]
name = "dsp-ctl"
version = "1.0.0"
edition = "2021"
authors = ["Asher LeRoy <asher@demod.ltd>"]
description = "DSP Coprocessor Control — TUI/CLI for ArchibaldOS DSP VM or direct hardware over HydraMesh/IP/USB/SSH"
license = "MIT"
repository = "https://github.com/ALH477/Oligarchy"

[[bin]]
name = "dsp-ctl"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.26"
crossterm = "0.27"
sysinfo = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"

# Optional: raw ethernet for HydraMesh transport
# socket2 = "0.5"

[profile.release]
opt-level = 3
lto = true
strip = true
