[package]
name = "oligarchy-greeting"
version = "1.0.0"
edition = "2021"
authors = ["Asher LeRoy <asher@demod.ltd>"]
description = "Oligarchy NixOS Welcome Greeting - CLI and TUI with Kitty image support"
license = "MIT"
repository = "https://github.com/ALH477/Oligarchy"

[[bin]]
name = "show-greeting"
path = "src/main.rs"

[[bin]]
name = "welcome-tui"
path = "src/tui_main.rs"

[dependencies]
# Core
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

# System info
sysinfo = "0.30"
libc = "0.2"

# TUI
ratatui = "0.26"
crossterm = "0.27"
ratatui-image = { version = "1.0", default-features = false, features = ["crossterm"] }

# Image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }

[profile.release]
opt-level = 3
lto = true
strip = true
